# synphony-py

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  pyproject.toml  tasks.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  JIRA_CLAUDE_RUN_ONCE_PLAN.md  RELEASE_READINESS.md  SYMPHONY_SPEC_PRODUCTION_PLAN.md
docs/examples/: WORKFLOW.claude.md  WORKFLOW.codex.md
src/synphony/: __init__.py  agent_runner.py  cli.py  config.py  errors.py  http.py  logging.py  models.py  orchestrator.py  path_safety.py  prompt.py  workflow.py  workflow_store.py  workspace.py
src/synphony/agents/: __init__.py  base.py  claude.py  codex.py  registry.py
src/synphony/tracker/: __init__.py  base.py  jira_acli.py  memory.py
tests/: conftest.py  fakes.py  test_agent_fakes.py  test_agent_registry.py  test_agent_runner.py  test_bootstrap.py  test_claude_backend.py  test_cli.py  test_codex_backend.py  test_config.py  test_examples.py  test_http.py  test_jira_acli.py  test_logging.py  test_models.py  test_orchestrator.py  test_tracker_memory.py  test_workflow.py  test_workflow_store.py  test_workspace.py
tests/fixtures/acli/: search_issues.json
tests/fixtures/claude/: print_json_success.json  stream_json_success.ndjson
